@@ -379,6 +379,29 @@ Description: OpenStack Compute network plugin for the Xen Cloud Platform
  master Xen API server (see the xcp-xapi package), so that nova can remotely
  configure the network of your XCP servers.
 
+Package: nova-conductor
+Architecture: all
+Depends: nova-common (= ${binary:Version}),
+ ${misc:Depends},
+ ${ostack-lsb-base},
+ ${python:Depends}
+Description: OpenStack Compute - conductor service
+ OpenStack is a reliable cloud infrastructure. Its mission is to produce
+ the ubiquitous cloud computing platform that will meet the needs of public
+ and private cloud providers regardless of size, by being simple to implement
+ and massively scalable.
+ .
+ OpenStack Compute, codenamed Nova, is a cloud computing fabric controller. In
+ addition to its "native" API (the OpenStack API), it also supports the Amazon
+ EC2 API.
+ .
+ Nova is intended to be modular and easy to extend and adapt. It supports many
+ different hypervisors (KVM and Xen to name a few), different database backends
+ (SQLite, MySQL, and PostgreSQL, for instance), different types of user
+ databases (LDAP or SQL), etc.
+ .
+ This is the Nova conductor service component
+
 Package: nova-cert
 Architecture: all
 Depends: nova-common (= ${binary:Version}),
