@@ -1,0 +1,20 @@
+.TH nova\-conductor 8
+.SH NAME
+nova\-conductor\- compute services management
+
+.SH SYNOPSIS
+.B nova\-conductor
+.B \-\-config-file=<config-filepath>
+
+.SH DESCRIPTION
+.B nova\-conductor
+
+This man page is a stub. Please contribute.
+
+.SH PARAMETERS
+
+.LP
+.B \-\-config-file=<config-filepath>
+.IP
+
+Path to the file containing options.
