@@ -1,0 +1,1 @@
+debian/mans/nova-conductor.8
