@@ -1,0 +1,7 @@
+#!/bin/sh -e
+
+if [ "$1" = purge ]; then
+	update-rc.d nova-conductor remove
+fi
+
+#DEBHELPER#
