@@ -1,0 +1,18 @@
+description "Nova conductor"
+author "Chuck Short <zulcss@ubuntu.com>"
+
+start on runlevel [2345]
+stop on runlevel [016]
+
+
+chdir /var/run
+
+pre-start script
+	mkdir -p /var/run/nova
+	chown nova:root /var/run/nova/
+
+	mkdir -p /var/lock/nova
+	chown nova:root /var/lock/nova/
+end script
+
+exec su -s /bin/sh -c "exec nova-conductor --config-file=/etc/nova/nova.conf" nova
