@@ -21,6 +21,10 @@ nova (2013.1~g1~20121119.17144-0ubuntu1) UNRELEASED; urgency=low
   * debian/control: Suggest websockify. (LP: #1076442)
   * debian/nova.conf: Disable nova-volume service.
   * debian/control: Depend on xen-system-* rather than the hypervisor.
+  * debian/control, debian/mans/nova-conductor.8, debian/nova-conductor.init,
+    debian/nova-conductor.install, debian/nova-conductor.logrotate
+    debian/nova-conductor.manpages, debian/nova-conductor.postrm
+    debian/nova-conductor.upstart.in: Add nova-conductor service.
 
  -- Adam Gandelman <adamg@canonical.com>  Wed, 31 Oct 2012 13:49:10 +0100
 
